--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
         function StartRecording() {
             recording = true;
+            alert("Data will be accessed to assist you");
             document.getElementById("StartRecording").style.display = "none";
             document.getElementById("StopRecording").style.display = "inline-block";
             document.getElementById("table").style.display = "table";
