--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             if (data.length > 0) {
                 let str = "["
                 for (let i = 0; i < data.length; i++) {
-                    str += "[" + data[i][0] + ", " + data[i][1] + "], "
+                    str += "[" + data[i][0] +  "], "
                 }
                 str = str.substring(0, str.length - 2);
                 str += "]"
