--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a id="StartRecording" class="waves-effect waves-light btn cyan" onclick=downloadFile()><i
                             class="material-icons right">file_download</i>Download</a>
                     <a id="StartRecording" class="waves-effect waves-light btn cyan" href="https://drive.google.com/drive/folders/19AsApciRNLN7tnmoS2IwcMok2uJeQAIB?usp=sharing"><i
-                                class="material-icons center">share_nus</i>Share</a>
+                                class="material-icons">share_nus</i>Share</a>
                 </div>
             </div>
             <div class="row">
