--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             class="material-icons right">clear</i>Clear</a>
                     <a id="StartRecording" class="waves-effect waves-light btn green" onclick=copy()><i
                             class="material-icons right">content_copy</i>Copy</a>
-                    <a id="StartRecording" class="waves-effect waves-light btn cyan" href="https://drive.google.com/drive/folders/19AsApciRNLN7tnmoS2IwcMok2uJeQAIB?usp=sharing" onclick=downloadFile()><i
+                    <a id="StartRecording" class="waves-effect waves-light btn cyan" onclick=downloadFile()><i
                             class="material-icons right">file_download</i>Download</a>
                     <a id="StartRecording" class="waves-effect waves-light btn cyan" href="https://drive.google.com/drive/folders/19AsApciRNLN7tnmoS2IwcMok2uJeQAIB?usp=sharing"><i
                                 class="material-icons right">share_nus</i>Share</a>
