--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
         let recording = false;
 
         let data = [
-             // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5],
-            // [251, 365], [4, 45], [64, 5]
+             // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32],
+            // [251, 365,7], [4, 45,87], [64, 5,32]
             
         ];
 
@@ -122,7 +122,7 @@
             if (recording) {
                 let str ="<tr><td>" + x + "</td><td>" + y + "</td><td>" + z +"</td></tr>";
                 document.getElementById("tbody").innerHTML += str;
-                data.push(x,y,z])
+                data.push([x,y,z])
             }
         }
 
@@ -141,9 +141,9 @@
             if (data.length > 0) {
                 let str = "["
                 for (let i = 0; i < data.length; i++) {
-                    str += "[" + data[i][0] +  "], "
+                   str += "[" + data[i][0] + ", " + data[i][1] + "], "
                 }
-                str = str.substring(0, str.length);
+                str = str.substring(0, str.length-2);
                 str += "]"
                 document.getElementById("dataFeild").style.display = "block";
                 document.getElementById("textarea").value = str;
