--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         console.log(Date.now());
         let recording = false;
 
-        let data = [
+        let data = [ "X","Y","Z"
              // [251, 365,7], [4, 45,87], [64, 5,32],
             // [251, 365,7], [4, 45,87], [64, 5,32],
             // [251, 365,7], [4, 45,87], [64, 5,32],
